# opengl_msdf_nosubmodules

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml
src/: FontAtlas.cpp  FontAtlas.hpp  Renderer.cpp  Renderer.hpp  Shader.cpp  Shader.hpp  main.cpp
